tests/ui/endpoint/unsafe.stderr
error: Endpoint handler methods must not be unsafe
 --> tests/ui/endpoint/unsafe.rs:9:1
  |
9 | unsafe fn read_all() {}
  | ^^^^^^
